public/stylesheets/app.css
.ui.segment:first-child {
    margin-top: 100px;
    padding-left: 30px;
    padding-right: 30px;
}

.slick-prev:before, .slick-next:before {
    font-size: 25px;
    opacity: .9;
    color: black;
}

#mapid {
   height: 250px;
   margin-top: 100px;
 }

#map {
  height: 500px;
  margin-top: 100px;
}

i.icon {
    font-size: 2em;
}

.label {
  font-size: 1.5rem;
}
 #blogLogin {
     margin: 7rem auto;
     position: relative;
     background-color: #8e3d84;
     max-width: 200px;
     border-radius: 15px 2px;
 }

.login {
  margin: 7rem auto;
  position: relative;
  background-color: #8e3d84;
  max-width: 200px;
  border-radius: 15px 2px;
}

.container.main {
    margin-top: 7.0em;
}

#gridContainer {
    margin: 20px 0;
}

#delete {
    display: inline;
}

body {
  background-color: #000;
}

.slideshow {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 0;
  list-style: none;
  margin: 0;
  padding: 0;
}

.slideshow li {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  opacity: 0;
  z-index: 0;
  animation: imageAnimation 50s linear infinite;
}

.slideshow li:nth-child(1) {
  background-image: url(https://images.unsplash.com/photo-1466978913421-dad2ebd01d17?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80)
}
.slideshow li:nth-child(2) {
  background-image: url(https://images.unsplash.com/photo-1525610553991-2bede1a236e2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
  animation-delay: 10s;
}
.slideshow li:nth-child(3) {
  background-image: url(https://images.unsplash.com/photo-1508213824875-83a3d36e72a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80);
  animation-delay: 20s;
}
.slideshow li:nth-child(4) {
  background-image: url(https://images.unsplash.com/photo-1471253794676-0f039a6aae9d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
  animation-delay: 30s;
}
.slideshow li:nth-child(5) {
  background-image: url(https://images.unsplash.com/photo-1543807669-0d0730e95cb3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80);
  animation-delay: 40s;
}

@keyframes imageAnimation {
  0% {
    opacity: 0;
    animation-timing-function: ease-in;
  }
  10% {
    opacity: 1;
    animation-timing-function: ease-out;
  }
  20% {
    opacity: 1
  }
  30% {
    opacity: 0
  }
}

 /*Older browser support - .no-cssanimations class added by modernizr */
.no-cssanimations .slideshow li {
	opacity: 1;
}

/*home page designe*/

#landing-container {
  z-index: 1;
  position: relative;
  text-align: center;
  margin: 15%;
  background: transparent;
  color: white;
  border-radius: 100px 50px;
  border-color: black;
  border-color: #8e3d84;
}

.ui.inverted.menu {
    background: #8e3d84;
}

.ui.animated.button {
    background-color: #8e3d84;
}

#profile-img {
    margin: auto;
    text-align: center;
    border-radius: 100px 50px;
    padding: 25;
}

.authForm {
  z-index: 1;
}
/*#newPost {*/
/*    -webkit-appearance: none;*/
/*       -moz-appearance: none;*/
/*            appearance: none;*/
/*    opacity: 0;*/
/*    position: absolute;*/
/*}*/

